--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         "editor.tabCompletion": "onlySnippets",
         "editor.wordBasedSuggestions": false,
         "editor.codeActionsOnSave": {
-            "source.fixAll": true,
+            // "source.fixAll": true,
             "source.organizeImports": true,
         },
     },
