--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   freezed: ^2.1.0+1
   freezed_annotation: ^2.1.0
+  go_router: ^5.0.1
   gql_http_link: ^0.4.0
   gql_link: ^0.5.0
   hive: ^2.0.0
